@@ -17,3 +17,7 @@ indent_style = tab
 # Markdown
 [*.md]
 trim_trailing_whitespace = false
+
+[*.xml]
+indent_style = space
+indent_size = 2
