@@ -7,7 +7,7 @@ Version 0.9.12:
     * Fixed various instances of missing or unnecessary minor tags on missions. (@Amazinite, @Anarchist2)
     * Governments now have the same attitude toward the " Hai " government as they do the "Hai" government. (@NomadicVolcano)
     * No longer able to ask the Remnant about the Ka'het before having passed the blood test. (@beccabunny)
-    * Max depreciation age now accounts for the 7 day grace period. (@Amazinite)
+    * Max depreciation age now accounts for the 7-day grace period. (@Amazinite)
     * The Wanderer outfit license is now granted when you return to Wanderer space instead of while in Hai space. (@Amazinite)
     * The number of drone and fighter bays is now properly displayed in the ship info when in flight. (@tehhowch)
     * The pop-up dialog when launching with ships that can not leave the system will now always refer to the correct number of ships. (@tehhowch)
@@ -54,6 +54,7 @@ Version 0.9.12:
     * Expanded the credits to acknowledge everyone who has contributed to the game on GitHub. (@Zitchas)
     * The game's build systems now support placing code files in subdirectories. (@tehhowch)
     * Various improvements to the GitHub build pipeline. (@MCOfficer, @petervdmeer, @tehhowch)
+    * Release note updates for the Appstream XML file. (@corecontingency)
 
 Version 0.9.11:
   * Big changes:
